<resources>
    <string name="app_name">mSkola</string>
    <string name="home">Home</string>
    <string name="food_order">Food Order</string>
    <string name="social_hub">Social Hub</string>
    <string name="favourite">Favourite</string>
    <string name="test">TEST</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_item_1">Profile</string>
    <string name="drawer_item_2">My Activity</string>
    <string name="drawer_item_3">Trending</string>
    <string name="drawer_item_4">Settings</string>
    <string name="drawer_item_5">About</string>
    <string name="drawer_item_6">Help</string>
    <string name="drawer_item_7">Logout</string>
    <string name="category">Others</string>
    <string name="personal">Personal</string>
    <string name="drawer_item_option1">Option 1</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option2">Option 2</string>
    <string name="drawer_item_option3">Option 3</string>
    <string name="theme_view">Theme</string>
    <string name="home_item_1_1">Events</string>
    <string name="home_item_1_2">Orders</string>
    <string name="home_item_1_3">Camera</string>
    <string name="home_item_2_1">Notification</string>
    <string name="home_item_2_2">Wallet</string>
    <string name="home_item_2_3">Inbox</string>
    <string name="register_1">Register</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_and_conditions">Apply Terms and Conditions</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="back">Please click BACK again to exit</string>
    <string name="verification">VERIFICATION</string>
    <string name="verification_text">Verification code has been sent to you on your mobile phone. Please enter it below</string>
    <string name="verification_message">You will get SMS with a confirmation code to this number.</string>
    <string name="_234">+234</string>
    <string name="_80_3211_2222">080 3211 2222</string>
    <string name="please_input_code_below">Please input code below</string>
    <string name="two_mins">02:00</string>
    <string name="continue_">CONTINUE</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="time_up">00:00</string>
    <string name="title_array_1">Food is Ready</string>
    <string name="title_array_2">Social Hub</string>
    <string name="title_array_3">Find nearby Eateries</string>
    <string name="title_array_4">Empower your food services</string>
    <string name="description_array_1">Never queue to eat! Process food order and payment and eat exactly when you have to</string>
    <string name="description_array_2">Connect with the food community, learn and share food/cooking ideas</string>
    <string name="description_array_3">Know what\'s always on the menu of your favourite eatery nearby</string>
    <string name="description_array_4">Connect your food entrepreneurial ventures to your customers and be patronised</string>
    <string name="step_of"> %1$d/%2$d</string>
    <string name="section_format">Section : %1$d</string>
    <string name="sign_in">S I G N \t  I N</string>
    <string name="sign_up_1">S I G N \t  U P</string>
    <string name="register">R E G I S T E R</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New user?   </string>
    <string name="other">Anything goes here</string>
    <string name="phone_username">Phone number</string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="tab">\t</string>
    <string name="loginFacebookButton">Sign in with Facebook</string>
    <string name="loginGoogleButton">Log in with Google</string>
    <string name="select_your_account_type">Select your account type</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="student">Student</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="email">EMAIL</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="d_o_n_e">D O N E</string>
    <string name="check_your_internet_connection_and_try_again">Please try again</string>
    <string name="connection_error">Connection error!</string>
    <string name="oops">Oops!</string>
    <string name="first_name">First Name</string>
    <string name="town">Town</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="err_msg_fname">Enter First name</string>
    <string name="err_msg_lname">Enter Last name</string>
    <string name="err_msg_email">Enter a valid Email address</string>
    <string name="err_msg_phone">Enter a phone number</string>
    <string name="err_msg_pass1">Enter a password</string>
    <string name="err_msg_pass2">Enter confrim password</string>
    <string name="err_msg_pass_mismatch">Password mismatch</string>
    <string name="err_msg_town">Enter a Town</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="school_ids_are_unique_for_every_school_your_school_id_will_be_saved_for_ease_of_subsequent_login">School IDs are unique for every school. Your school ID will be saved for ease of subsequent login.</string>
    <string name="enter_school_id">Enter School ID</string>
    <string name="pick_image_intent_text">Select or take passport</string>
    <string name="administration">Administration</string>
    <string name="academics">Academics</string>
    <string name="achievements">Achievements</string>
    <string name="messages">Messages</string>
    <string name="bursary">Bursary</string>
    <string name="cbt">CBT</string>
    <string name="next">Next</string>
    <string name="login">L O G I N</string>
    <string name="manage_results">Results</string>
    <string name="assignment">Assignment</string>
    <string name="attendance">Attendance</string>
    <string name="assessment">Assessment</string>
    <string name="staff">STAFF</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="alert">Alert</string>
    <string name="demo_name">My Name</string>
    <string name="get_started">Get Started</string>
    <string name="default_alarm_text">Set an alarm to remind some minutes before your child/children close for the day</string>
    <string name="enter_score">Enter a score</string>
    <string name="register_score">Register Score</string>
    <string name="mark_all">MARK ALL</string>
    <string name="no_internet_connection">Check internet connection</string>
    <string name="pay_fees">Pay Fees</string>
    <string name="payment_status">Payment Status</string>
    <string name="verifying_school_id">Verifying School ID</string>
    <string name="assignment_history">Assignment History</string>
    <string name="collate_assignments">Collate Assignments</string>
    <string name="give_assignments">Give Assignments</string>
    <string name="submission_time">Submission time</string>
    <string name="submission_date">Submission Date</string>
    <string name="type_your_questions_here">Type your questions here:</string>
    <string name="u_p_l_o_a_d">U P L O A D</string>
    <string name="given_ass">Given Assignments</string>
    <string name="enter_value">Type</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="start_typing">Start typing</string>
    <string name="recent_activity">Recent Activities</string>
    <string name="view_schools_details">View schools details</string>
    <string name="info">INFO</string>
    <string name="change_password">Change password!</string>
    <string name="change_password_text">Change Password</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="invite_a_friend">Check out mSkola, I use it to keep abreast with the academic
    progress of my ward(s). Get it for free at mountedwingscs.com </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="square_red_name">square_red</string>
    <string name="square_blue_name">square_blue</string>
    <string name="square_green_name">square_green</string>
    <string name="transition_reveal1">transition_reveal1</string>
    <string name="sample_blue_title">sample_blue_title</string>
    <string name="long_text">Bacon ipsum dolor amet cupidatat bresaola minim, aliquip beef aute ea porchetta. Meatball brisket do, rump in beef ea ham hock spare ribs mollit qui dolore ipsum voluptate cow. Drumstick prosciutto salami duis jerky jowl. Mollit ball tip short ribs doner fugiat frankfurter leberkas andouille kevin pork loin nostrud ham culpa. Rump pariatur ham hock excepteur picanha pork. Corned beef flank proident shankle rump.</string>
    <string name="medium_text">Porchetta landjaeger tail meatball t-bone spare ribs. Sirloin pork chop bacon pork belly strip steak. Porchetta ham meatball pig salami short ribs jowl spare ribs sirloin tongue jerky cupim chuck.</string>
    <string name="reveal_body1">Circular Reveal Animation starting from the center of target view</string>
    <string name="reveal_body2">Circular Reveal Animation starting from touch coordinates</string>
    <string name="reveal_body3">View layout change animation with Circular Reveal Animation on finish</string>
    <string name="reveal_body4">Circular Reveal Animation from top with nested animations on end</string>
    <string name="assessment_menu">Assessment Menu</string>
    <string name="assessment_information">Assessment Information</string>
    <string name="result_information">Result Information</string>
    <string name="search">Search</string>
    <string name="list_children">List of Children</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Schools using mSkola</string>
    <string name="version">Version 1.0</string>
    <string name="my_class">My Class</string>
    <string name="license">Copyright 2019 Mountedwings Cybersystems LTD\n\nLicensed under the Apache License, Version 2.0 (the "License")\;
you may not use this file except in compliance with the License.
You may obtain a copy of the License at \n\n \t\t\t\t

    http://www.apache.org/licenses/LICENSE-2.0
        \n\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
</resources>