<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2019 Mountedwings Cybersystems LTD. All rights reserved.
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/food_order"
        android:icon="@drawable/ic_restaurant"
        android:title="@string/food_order" />

    <item
        android:id="@+id/social_hub"
        android:icon="@drawable/ic_chat"
        android:title="@string/social_hub" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favourite" />

</menu>
