<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/step_title"
            android:layout_width="@dimen/spacing_xlarge"
            android:layout_height="@dimen/spacing_xlarge"
            android:background="@drawable/shape_round_solid"
            android:gravity="center">

            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <View
            android:layout_width="2sp"
            android:layout_height="match_parent"
            android:background="@color/grey_10"
            android:minHeight="?android:attr/actionBarSize" />

    </LinearLayout>

    <View
        android:layout_width="@dimen/spacing_large"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xlarge"
            android:gravity="center_vertical"
            android:onClick="clickLabel"
            android:paddingLeft="@dimen/spacing_small"
            android:paddingRight="@dimen/spacing_small"
            android:text="@string/demo_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/grey_90" />

        <LinearLayout
            android:id="@+id/lyt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_score"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/bt_continue_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:minWidth="0dp"
                    android:onClick="clickAction"
                    android:text="@string/register_score"
                    android:theme="@style/Button.Primary" />

                <Button
                    android:id="@+id/bt_skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:minWidth="0dp"
                    android:onClick="clickAction"
                    android:text="@string/SKIP"
                    android:theme="@style/Button.Accent.Borderless" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>